# pyaro

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci_tests.yml  publish.yml  python-app.yml
docs/: README.md  Ungriddeddata.rst  api.rst  conf.py  how-to-add-new-reader.rst  index.rst  installation.rst  reader-design.rst  requirements.txt  stationdata.rst  timeseries_data.rst
docs/pics/: genindex.rst
docs/puml/: Filter.puml  ReaderFactory.puml  TimeseriesReader.puml  TimeseriesReaderData.puml  UngriddedData.puml
docs/tutorials/: basic_api.ipynb  filters.ipynb  index.rst  pyaerocom.ipynb
scripts/: benchmark_relalt_filter.py  make_elevation_subset.py  make_topography_subset.py
src/pyaerocom_readers/: TimeSeriesReader.py  __init__.py  plugins.py
src/pyaerocom_readers/csvreader/: CSVTimeseriesReader.py  __init__.py
src/pyaerocom_readers/timeseries/: Data.py  Reader.py  Station.py  _Data.py  _Station.py
src/pyaro/: __init__.py  plugins.py
src/pyaro/csvreader/: CSVTimeseriesReader.py
src/pyaro/timeseries/: AutoFilterReaderEngine.py  Data.py  Engine.py  Filter.py  Reader.py  Station.py  Wrappers.py  __init__.py
tests/: test_CSVTimeSeriesReader.py  test_timefilter.py
tests/testdata/: csvReader_testdata.csv  timeVariableStationFilter_exclude.csv
tests/testdata/datadir/: csvReader_testdata.csv  csvReader_testdata.csv.with_header  csvReader_testdata2.csv
tests/testdata/datadir_elevation/: .~lock.csvReader_testdata_elevation.csv#  csvReader_testdata_elevation.csv  gtopo30_subset.nc  orography.nc  topography.nc
(+2 files in other folders)
